# python-quiz

./: .gitignore  CLAUDE.md  README.md  SEMANTIC_VALIDATION_GUIDE.md  Taskfile.yml
backend/: .env.example  README.md  embeddings.py  game_state.py  log_config.json  main.py  models.py  pyproject.toml  scoring.py  storage.py  test_semantic.py  validation.py
frontend/: .env.example  astro.config.mjs  package-lock.json  package.json  python_intro_questions.md  tsconfig.json
frontend/src/components/: CopyButton.astro  Instructions.astro  Leaderboard.astro  Question.astro  QuestionDetails.astro  QuizHost.astro  QuizPlayer.astro  Timer.astro
frontend/src/content/: config.ts
frontend/src/content/quiz/more-python/: question-04.md  question-05.md  question-06.md  question-07.md  question-08.md  question-09.md  question-10.md  question-11.md  question-12.md
frontend/src/content/test-quiz/: question-01.md  question-02.md  question-03.md  question-04.md  question-05.md  question-06.md  question-07.md  question-08.md  question-09.md  question-10.md
frontend/src/layouts/: Layout.astro
frontend/src/lib/: alpine-helpers.ts  alpineInit.ts  auth.ts  join-room.ts  room-creation.ts  session-storage.ts  utils.ts  websocket.ts
frontend/src/lib/alpine/: alpineInit.ts  leaderboard.ts  quizHost.ts  quizPlayer.ts  timer.ts  types.ts
frontend/src/pages/: create-room.astro  index.astro  join.astro  playground.astro
frontend/src/pages/leaderboard/: [roomId].astro
frontend/src/pages/room/[roomId]/: host.astro  (+2 more)
frontend/src/styles/: global.css
frontend/src/utils/: quizUtils.ts
(+55 files in other folders)
