[project]
name = "quiz-backend"
version = "0.1.0"
description = "Real-time quiz platform backend - FastAPI + WebSockets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.14.1",
    "uvicorn[standard]>=0.38.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
]
